Dispatch slotchange events in "notify mutation observers" steps

The spec is: https://dom.spec.whatwg.org/#notify-mutation-observers

The current behavior does not match the DOM Standard. The difference is observable
if a user mutates DOM, which will trigger a slotchange, in a mutation observer's
callback function.

See crbug.com/671976 for details.

This CL fixes a failing wpt test, wpt/shadow-dom/slotchnage-event.html.

BUG=649159,671976

Review-Url: https://codereview.chromium.org/2622193002
Cr-Commit-Position: refs/heads/master@{#443866}

Former-commit-id: c806e7eaec2921239800ad1a907b3d347f4f4a30